# short_tutorials

./: .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  uv_tutorial_pointer.html
.github/workflows/: docs.yml
_sources/: index.rst  index.rst.txt  uv_tutorial_pointer.rst.txt
_sources/tutorials/: Julia_tutorial.ipynb  errors_exceptions_in_python.ipynb  profiling_accelerating_python_code.ipynb  uv_tutorial_pointer.rst
_sources/tutorials/JAX/: README.md
_sources/tutorials/package-specific/: MeshoidTest.ipynb  korg.rst
_sources/tutorials/python/accelerating/: index.rst  numba.rst
_sources/tutorials/python/basics/: errors_exceptions_in_python.ipynb  index.rst
_sources/tutorials/python/envs/: virtual_environments_python.rst
_sources/tutorials/python/jax/: Intro-to-JAX.ipynb  jax_distributed_computing.ipynb
coverage/: class_index.html  function_index.html  index.html  status.json  z_e6f4b5fa949e942d_example_module_py.html
docs/: conf.py  index.rst  uv_tutorial_pointer.rst
docs/_static/: using-uv
docs/tutorials/: Julia_tutorial.ipynb  errors_exceptions_in_python.ipynb  functions_classes_in_python.ipynb  profiling_accelerating_python_code.ipynb
docs/tutorials/JAX/: 0-the_new_python.ipynb  1-jax_and_autodiff.ipynb  3-unxt.ipynb  index-JAX.rst
docs/tutorials/general/: numerics.rst  vibe_coding.rst
docs/tutorials/julia/: Julia_tutorial.ipynb
docs/tutorials/python/accelerating/: profiling_accelerating_python_code.ipynb
docs/tutorials/python/basics/: functions_classes_in_python.ipynb
docs/tutorials/python/envs/: developing_packages.rst  index.rst  using_uv.rst
docs/tutorials/python/jax/: index.rst
short_tutorials/: Julia_tutorial.ipynb  errors_exceptions_in_python.ipynb  functions_classes.ipynb  profiling_accelerating_python_code.ipynb  using-uv.html  virtual_environments_python.md
short_tutorials/JAX/: 0-the_new_python.ipynb  1-jax_and_autodiff.ipynb  2-quax.ipynb  README.md  dimensional.py  pyproject.toml
tutorials/: Julia_tutorial.html  Julia_tutorial.ipynb  errors_exceptions_in_python.html  errors_exceptions_in_python.ipynb  functions_classes_in_python.html  functions_classes_in_python.ipynb  profiling_accelerating_python_code.html  uv_tutorial_pointer.html  virtual_environments_python.html
tutorials/JAX/: 0-the_new_python.html  1-jax_and_autodiff.html  2-quax.html  2-quax.ipynb  3-unxt.html  README.html  index-JAX.html
tutorials/general/: numerics.html  vibe_coding.html
tutorials/julia/: Julia_tutorial.html  Julia_tutorial.ipynb
tutorials/package-specific/: MeshoidTest.html  MeshoidTest.ipynb  korg.html
tutorials/python/accelerating/: index.html  numba.html  profiling_accelerating_python_code.html
tutorials/python/basics/: errors_exceptions_in_python.html  errors_exceptions_in_python.ipynb  functions_classes_in_python.html  functions_classes_in_python.ipynb  index.html
tutorials/python/envs/: developing_packages.html  index.html  using_uv.html  virtual_environments_python.html
tutorials/python/jax/: Intro-to-JAX.html  Intro-to-JAX.ipynb  index.html  jax_distributed_computing.html  jax_distributed_computing.ipynb
(+15 files in other folders)
