[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "short_tutorials"
description = "CCA Software Group programming tutorials"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "coverage",
    "coverage-badge",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx_rtd_theme",
    "sphinxcontrib-fulltoc",
    "nbsphinx",
    "jupyter_client",
    "ipykernel",
]
coding_standards = [
    "ruff",
]
type_checking = [
    "mypy",
]
dev = ["short_tutorials[test, docs, coding_standards]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
testpaths = [
  "test",
  "docs",
]

[tool.mypy]
exclude = [
  "docs",
]
explicit_package_bases = "True"

[tool.coverage.run]
omit = [
 "short_tutorials/__init*",
 "*/short_tutorials/__init*",
 "test/*",
 "*/test/*",
]