[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "short_tutorials"
version = "0.0.1"
description = "CCA Software Group programming tutorials"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "numba",
    "snakeviz",
    "jupyterlab",
    "notebook",
    "ipykernel",
    "pytest",
    "jax",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-automodapi",
    "sphinx_book_theme",
    "sphinxcontrib-fulltoc",
    "nbsphinx",
    "jupyter_client",
    "ipykernel",
    "myst_parser",
    "jupyter-book",
]
coding_standards = [
    "ruff",
]

dev = ["short_tutorials[docs, coding_standards]"]

[tool.setuptools]
zip-safe = false
include-package-data = true

# [tool.setuptools.packages.find]
# explicit_package_bases = true
