[project]
name = "flatiron-presentation"
version = "2025.09.23"
description = "Jumping JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.1.0",
    "beartype>=0.21.0",
    "equinox>=0.13.1",
    "galax",
    "ipykernel>=6.30.1",
    "jax<0.7",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.6",
    "plum-dispatch>=2.5.7",
    "quax>=0.2.0",
    "unxt>=1.6.6",
]

[tool.uv.sources]
galax = { git = "https://github.com/GalacticDynamics/galax" }
unxt = { git = "https://github.com/GalacticDynamics/unxt" }
